--- a/kubernetes/volume.yaml
+++ b/kubernetes/volume.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   capacity:
     storage: 50Gi
+  storageClassName: standard
   accessModes:
     - ReadWriteOnce
   gcePersistentDisk:
